--- a/NAUT 3 - Main CSS File.css
+++ b/NAUT 3 - Main CSS File.css
@@ -3113,26 +3113,27 @@ body .content .sitetable .link .title a:hover, .link .domain a:hover, .link .ent
 /* --- End --- */
 
 /* ADDON: CUSTOM LOGO */
-
-#header .pagename a {padding:0;position:absolute;text-indent:-9999px;margin:0;top:-278px;background:url(%%logo%%);background-position:0 0;background-repeat:no-repeat;}
-#header .pagename a:hover {background-color:transparent;}
-
-/* Center Logo */
-#header-bottom-left {width: calc( 100% - 32px);}
-#header .pagename {width:100%;display:block;position:absolute;top:-278px;z-index: -1;}
-.submit-page #header .pagename {top: -36px;}
-#header .pagename a {position:relative;display:block;top:0;margin-left: auto;margin-right: auto;}
-/* END CENTER */
-#header .pagename a {
-    margin-top:    50px; /* Space from top */
-    left:          0;     /* Space from left */
-    width:         152px; /* Width of image */
-    height:        179px;  /* Half the height of your image */
+.side .md h6 a:last-of-type {
+    position: absolute;
+    top: 60px;
+    left: 50%;
+    margin-left: -76px;
+    font-size: 0;
+    width: 152px;
+    height: 179px;
+    display: block;
+    background: url(%%logo%%) no-repeat;
+    z-index: 1;
+    background-position: center;
 }
 /* END ADDON */
 
-/* ADDON: White hover on tabmenu */
+/* ADDON: White hover on tabmenu/pagename */
 #header .tabmenu li a:hover {
+    color: rgba(255,255,255,1);
+    background-color: rgba(255,255,255,0.1);
+}
+#header .pagename a:hover {
     color: rgba(255,255,255,1);
     background-color: rgba(255,255,255,0.1);
 }
